k8s/apps/payments/httproute.yaml
---
# HTTPRoute for payments-platform - INTERNAL
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payments-platform-internal
  namespace: payments
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - payments.envoy.grendel71.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: payments-platform
          port: 8000
